@@ -1,3 +1,4 @@
+  -added hat and message clear buttons
   -fixed init reset
   -Added clickable links in chat iff it contains 'http'
   -new session button
